fixed styling issue on small phone screen

--- a/public/styles.css
+++ b/public/styles.css
@@ -9,9 +9,11 @@ body {
 
 main {
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     max-width: 1280px;
     margin: auto;
+    max-height: 100vh;
+    overflow: auto;
 }
 
 h1 {
@@ -22,8 +24,9 @@ form {
     display: flex-wrap;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 10px;
     justify-content: space-between;
+    max-height: 25vh;
 }
 
 form textarea {
@@ -39,7 +42,7 @@ form textarea {
 
 form select, form button {
     width: 240px;
-    margin: 5px;
+    max-width: 40%;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #e1e1e1;
@@ -48,12 +51,11 @@ form select, form button {
 }
 
 #chat-log {
-    height: 500px;
+    height: 75vh;
     overflow-y: auto;
     background-color: #f5f5f5;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    margin-top: 20px;
 }
 
 .message {
